<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="org.android.go.sopt.week1.presentation.sign.SignUpActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".week1.presentation.sign.SignUpActivity">

        <TextView
            android:id="@+id/tv_sign_up_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="90dp"
            android:gravity="center"
            android:text="@string/sign_up_title"
            android:textSize="23dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sign_up_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sign_id"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_sign_up_title"
            app:layout_constraintStart_toStartOf="@id/tv_sign_up_title"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_title" />

        <EditText
            android:id="@+id/et_sign_up_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="아이디를 입력하세요"
            app:layout_constraintEnd_toEndOf="@id/tv_sign_up_id"
            app:layout_constraintStart_toStartOf="@id/tv_sign_up_id"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_id" />

        <TextView
            android:id="@+id/tv_sign_up_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sign_pw"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_sign_up_title"
            app:layout_constraintStart_toStartOf="@id/tv_sign_up_title"
            app:layout_constraintTop_toBottomOf="@id/et_sign_up_id" />

        <EditText
            android:id="@+id/et_sign_up_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="비밀번호를 입력하세요"
            app:layout_constraintEnd_toEndOf="@id/tv_sign_up_pw"
            app:layout_constraintStart_toStartOf="@id/tv_sign_up_pw"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_pw" />

        <TextView
            android:id="@+id/tv_sign_up_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sign_up_name"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_sign_up_title"
            app:layout_constraintStart_toStartOf="@id/tv_sign_up_title"
            app:layout_constraintTop_toBottomOf="@id/et_sign_up_pw" />

        <EditText
            android:id="@+id/et_sign_up_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="이름을 입력하세요"
            app:layout_constraintEnd_toEndOf="@id/tv_sign_up_name"
            app:layout_constraintStart_toStartOf="@id/tv_sign_up_name"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_name" />

        <TextView
            android:id="@+id/tv_sign_up_talent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sign_up_talent"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_sign_up_title"
            app:layout_constraintStart_toStartOf="@id/tv_sign_up_title"
            app:layout_constraintTop_toBottomOf="@id/et_sign_up_name" />

        <EditText
            android:id="@+id/et_sign_up_talent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="특기를 입력하세요"
            app:layout_constraintEnd_toEndOf="@id/tv_sign_up_pw"
            app:layout_constraintStart_toStartOf="@id/tv_sign_up_pw"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_talent" />

        <Button
            android:id="@+id/btn_sign_up_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/pink_pale"
            android:paddingVertical="10dp"
            android:text="@string/sign_sign_up"
            app:layout_constraintTop_toBottomOf="@id/et_sign_up_talent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>